--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,11 @@ web:
     MYSQL_USER: myapp
     MYSQL_PASSWORD: mysecurepass
     MYSQL_HOST: db
-db:
-  image: orchardup/mysql
-  ports:
-    - "3306:3306"
-  environment:
-    MYSQL_DATABASE: myapp
-    MYSQL_USER: myapp
-    MYSQL_PASSWORD: mysecurepass
+# db:
+#   image: orchardup/mysql
+#   ports:
+#     - "3306:3306"
+#   environment:
+#     MYSQL_DATABASE: myapp
+#     MYSQL_USER: myapp
+#     MYSQL_PASSWORD: mysecurepass
