--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,11 +6,30 @@ upstream web {
 }
 
 server {
-  listen 80 default_server;
+  listen 80;
+  server_name mochosolutions-stagin.com www.mochosolutions-stagin.com;
+  location / {
+    return 301 https://$host$request_uri;
+  }
 
-  server_name _;
+  location /.well-known/acme-challenge/ {
+    root /var/www/certbot;
+  }
+
+}
+
+
+server {
+  listen 443 ssl;
+  server_name mochosolutions-stagin.com www.mochosolutions-stagin.com;
 
   server_tokens off;
+
+  ssl_certificate /etc/letsencrypt/live/mochosolutions-stagin.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/mochosolutions-stagin.com/privkey.pem;
+
+  include /etc/letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
   gzip on;
   gzip_proxied any;
